src/ui/scss/root.scss
@use 'colors';
@use 'layout';

body {
  width: 100vw;
  height: 100%;
  @extend .flex-column;
  @include layout.no-margins;
  background-color: colors.$brand-primary-variant;
  color: colors.$brand-text-dark;
  font-size: 18px;
  font-family: "Public Sans", sans-serif;
  font-optical-sizing: auto;
  font-weight: 300;
  font-style: normal;
}

header {
  width: 100%;
  height: 140px;
  @extend .flex-column;
  @include layout.no-margins;
  border-bottom: 3px solid colors.$brand-accent;
  background-color: colors.$brand-background;
}

main {
  width: 320px;
  height: fit-content;
  max-width: 50ch;
  @include layout.flex(start, center, column);
  gap: 1rem;
  padding-top: 0;
  padding-left: 2rem;
  padding-right: 2rem;
  padding-bottom: 250px;
}

section {
  width: 100%;
  @extend .flex-column;
}

.intro {
  background-color: colors.$brand-primary;
  color: colors.$brand-text-light;
  padding: 1rem;
}

.gallery,
.gallery picture {
  @extend .flex-column;
  margin: 0;
  padding: 1rem;
  @include layout.no-margins;
}

article {
  width: 285px;
  @extend .flex-column;
  border-radius: 5px;
  padding: 1rem;
  background-color: colors.$brand-background;
}

footer {
  position: fixed;
  bottom:0;
  left: 0;
  right: 0;
  width: 100%;
  height: 200px;
  @extend .flex-column;
  @include layout.no-margins;
  text-align: center;
  border-top: 3px solid colors.$brand-accent;
  background-color: colors.$brand-background;
  font-size: 16px;
}

#shabbat {
  max-width: 25ch;

  p {
    @include layout.no-margins;
  }
}

.title {
  font-weight: 600;
}

h1 {
  font-size: 1.7rem;
}

h2 {
  font-size: 1.5rem;
}

h3 {
  font-size: 1.2rem;
}

@media screen and (min-width: 945px) {
  body {
    @include layout.flex(center, start, column);
    flex-direction: row;
    background-color: colors.$brand-background;
  }

  header {
    @include layout.desktop;
  }

  header img {
    height: 120px;
  }

  main {
    width: 400px;
    border-left: 3px solid colors.$brand-accent;
    border-right: 3px solid colors.$brand-accent;
    background-color: colors.$brand-primary-variant;
  }

  article {
    width: 370px;
  }

  footer {
    @include layout.desktop;
  }
}

